--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,6 +9,6 @@ RUN tar -jxvf LJSpeech-1.1.tar.bz2
 
 RUN git clone https://github.com/brinkor/testTacotron2.git
 
-WORKDIR Tacotron-2
+WORKDIR testTacotron2
 RUN ln -s ../LJSpeech-1.1 .
 RUN pip install -r requirements.txt
